count windows from 0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,8 @@ unbind C-b
 set -g prefix `
 bind ` send-prefix
 
-# count windows from 1 for easier keyboard switching
-set -g base-index 1
+# count windows from 0
+set -g base-index 0
 
 # improve colors
 set -g default-terminal 'screen-256color'
