--- a/.config/i3/config
+++ b/.config/i3/config
@@ -61,3 +61,7 @@ bindsym Mod4+Shift+c reload
 bindsym Mod4+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym Mod4+Shift+e exit
+
+# execute on startup
+exec chromium-browser
+exec xterm
