--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,9 @@
 #    Hostname ssh.github.com
 #    Port 443
 
+#Host github.com
+#    LogLevel DEBUG3
+
 Host me.github.com
 HostName github.com
 PreferredAuthentications publickey
